--- a/hooks/build
+++ b/hooks/build
@@ -1,6 +1,6 @@
 #!/bin/sh 
 
-DOCKERFROM=horovod/horovod:0.20.0-tf2.3.0-torch1.6.0-mxnet1.6.0.post0-py3.7-cuda10.1
+DOCKERFROM=horovod/horovod:0.22.1
 
 docker build \
   --rm \
